fixed alignemt issue in the info section

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@
     background-image: url("./assets/mobile/image-footer.jpg");
     background-size: cover;
     width: 100%;
-    background-color: rgba(77, 151, 169, 0.7);
     background-position: top;
   }
 
